Fix CLS(Cummulative Layou Shift) - Web Vital

--- a/styles/post-detail.css
+++ b/styles/post-detail.css
@@ -23,6 +23,7 @@ section.hero {
 .post-detail .post-image {
   width: 100%;
   margin-bottom: 1rem;
+  object-fit: cover;
 }
 
 
